           were previously left undestroyed, consuming resources and
           keeping, e.g., locks open longer than needed.

- Cosmetic and UI bugs:

  * [curses]: Apply patch from Ubuntu: don't mention 'su' in 'Become
              root'.

  * [cmdline]: Use arch-qualified names in 'Provided by' for virtual
               packages (LP: #972847)

- Build system changes:

  * [all]: Include build of gtest when building gmock. (Closes: #670403)

  * [all]: Fix check_boost.sh for out-of-tree builds

- Documentation:

  * [doc]: Apply patch from Ubuntu: update Finnish manpage to point to
           doc package.

- New translations:

  * Croatian (Closes: #667934)

[3/17/2012]
Version 0.6.6                               "There is not one you,
                                             there are many."

This version of aptitude brings in basic multi-arch support.  Similar
to APT, foreign-arch packages are displayed using their full name,
including architecture, for example: 'libc6:armel'.

This is intended to provide some support for users of multi-arch
systems without causing huge breakage.  For users of single-arch
systems the changes are limited to displaying the full names of all
packages in log files and internal messages.

CAUTION: The problem resolver is not yet updated to handle multi-arch
properly.  Do not rely on it to make intelligent suggestions at this
stage, instead, use the architecture information to manually check and
resolve any problems.

- Removed features:

  * [gtk]: Remove menu entry for minesweeper.  This was causing
           security concerns by potentially invoking an external
           program with root privledges. (Closes: #552522)

- Security fixes:

- Crashes and serious errors:

  * [cmdline]: List update errors are reported. (Closes: #451137)

  * [all]: Fix '?action(upgrade)' and others (were finding kept
           packages instead).  Thanks to Rogier <rogier777@gmail.com>
           for the patch (Closes: #603862)
